--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ dependencies = [
     "temporalio (>=1.17.0,<2.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "dependency-injector[pydantic2] (>=4.48.1,<5.0.0)",
-    "pydantic-settings (>=2.10.1,<3.0.0)"
+    "pydantic-settings (>=2.10.1,<3.0.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "pydantic (>=2.11.9,<3.0.0)",
+    "diskcache (>=5.6.3,<6.0.0)",
+    "pyyaml (>=6.0.2,<7.0.0)"
 ]
 
 
