--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,20 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "axios": "^1.6.2",
-    "d3": "^7.8.5",
-    "vis-network": "^9.1.6",
-    "vis-data": "^7.1.4",
-    "element-plus": "^2.4.4",
     "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
-    "vue-chartjs": "^5.2.0"
+    "d3": "^7.8.5",
+    "element-plus": "^2.4.4",
+    "pinia": "^2.1.7",
+    "vis-data": "^7.1.4",
+    "vis-network": "^9.1.6",
+    "vue": "^3.3.8",
+    "vue-chartjs": "^5.2.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.9",
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
