--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "pydantic (>=2.11.9,<3.0.0)",
     "diskcache (>=5.6.3,<6.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
-    "stanza (>=1.10.1,<2.0.0)"
+    "stanza (>=1.10.1,<2.0.0)",
+    "intervaltree (>=3.1.0,<4.0.0)"
 ]
 
 
