--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "diskcache (>=5.6.3,<6.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
     "stanza (>=1.10.1,<2.0.0)",
-    "intervaltree (>=3.1.0,<4.0.0)"
+    "intervaltree (>=3.1.0,<4.0.0)",
+    "pytest (>=8.4.2,<9.0.0)"
 ]
 
 
