--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve --port 3000",
-    "serve": "vue-cli-service serve --port 3000",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "serve": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
@@ -14,6 +15,7 @@
     "chart.js": "^4.4.0",
     "d3": "^7.8.5",
     "element-plus": "^2.4.4",
+    "mark.js": "^8.11.1",
     "pinia": "^2.1.7",
     "vis-data": "^7.1.4",
     "vis-network": "^9.1.6",
@@ -22,15 +24,12 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "^5.0.9",
-    "@vue/cli-plugin-router": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
-    "@vue/eslint-config-standard": "^8.0.1",
+    "@vitejs/plugin-vue": "^5.0.0",
     "eslint": "^8.54.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^9.18.1"
+    "eslint-plugin-vue": "^9.18.1",
+    "vite": "^5.0.0"
   }
 }
