--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "d3": "^7.8.5",
     "element-plus": "^2.4.4",
     "mark.js": "^8.11.1",
+    "marked": "^16.3.0",
     "pinia": "^2.1.7",
     "vis-data": "^7.1.4",
     "vis-network": "^9.1.6",
