--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,8 +11,8 @@ python = ">=3.12,<3.14"
 fastapi = "^0.112"
 uvicorn = "^0.30"
 neo4j = "^5.23"
-ollama = "^0.1.0"
-minerva-models = {path = "../../minerva-models", develop = true}
+ollama = "^0.6.0"
+minerva-models = {path = "../minerva-models", develop = true}
 aiosqlite = "^0.21.0"
 temporalio = {extras = ["testing"], version = "^1.17.0"}
 pytest-asyncio = "^1.2.0"
