--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,27 +10,28 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
-    "axios": "^1.6.2",
-    "chart.js": "^4.4.0",
-    "d3": "^7.8.5",
-    "element-plus": "^2.4.4",
+    "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.13.4",
+    "chart.js": "^4.5.1",
+    "d3": "^7.9.0",
+    "element-plus": "^2.13.2",
     "mark.js": "^8.11.1",
-    "marked": "^16.3.0",
-    "pinia": "^2.1.7",
-    "vis-data": "^7.1.4",
-    "vis-network": "^9.1.6",
-    "vue": "^3.3.8",
-    "vue-chartjs": "^5.2.0",
-    "vue-router": "^4.2.5"
+    "marked": "^17.0.1",
+    "pinia": "^3.0.4",
+    "vis-data": "^8.0.3",
+    "vis-network": "^10.0.2",
+    "vue": "^3.5.27",
+    "vue-chartjs": "^5.3.3",
+    "vue-router": "^5.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.0",
-    "eslint": "^8.54.0",
-    "eslint-plugin-import": "^2.29.0",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "eslint": "^9.39.2",
+    "vue-eslint-parser": "^10.0.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.18.1",
-    "vite": "^5.0.0"
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-vue": "^10.7.0",
+    "vite": "^7.3.1"
   }
 }
