--- a/minerva-desktop/src-tauri/Cargo.toml
+++ b/minerva-desktop/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ name = "minerva_desktop_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.5.4" }
+tauri-build = { version = "2.5.4", features = [] }
 
 [dependencies]
 serde_json = "1.0"
